# services/headless-lms/models/src/library/copying.rs
@@ -123,7 +123,8 @@ RETURNING id,
   closed_at,
   closed_additional_message,
   closed_course_successor_id,
-  chapter_locking_enabled
+  chapter_locking_enabled,
+  cheater_detection_enabled
         "#,
         new_course.name,
         new_course.organization_id,
